added delete multiple users method